# VecIM

./: CMakeLists.txt  README.md  config_modeling.xml  readme.txt
3rd_scip/: CMakeLists.txt
3rd_soplex/: CMakeLists.txt
Facade/: CMakeLists.txt  FileIO.cpp  approximate_squared_distance.h  arr.cpp  arr.h  base.h  generate_fc_map.cpp  hypothesis_generator.cpp  kdtree_search.cpp  main.cpp  method_common.h  ply.c  ply.h  ransac_detection.cpp  segment_selection.cpp
basic/: CMakeLists.txt  Config.h  assertions.cpp  logger.h
cmake/: UseGCOptimization3.cmake
math/: CMakeLists.txt  linear_program_solver.cpp  linear_program_solver.h  linear_program_solver_SCIP.cpp  math_common.h
